# CryptoFlowEngine

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  TROUBLESHOOTING.md  docker-compose.yml  main.py  pyproject.toml  run_dashboard.py  test_detectors.py
ai/: __init__.py  signal_explainer.py
config/: __init__.py  settings.yaml
core/: __init__.py  logging_config.py  market_data_handler.py  websocket_client.py
crypto_orderflow_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: __init__.py  api_server.py  routes.py
dashboard/templates/: index.html
data/: trading_bot.db
database/: __init__.py  db_manager.py  models.py
docs/: Architecture.md  Devlopment_plan.md  Technical_part.md  Trading_strategy_plan.md  Websocket.md
orderflow/: __init__.py  absorption_detector.py  cvd_engine.py  delta_engine.py  footprint_engine.py  imbalance_detector.py  liquidity_engine.py
paper_trading/: __init__.py  pnl_tracker.py  simulator.py
strategy/: __init__.py  initiation_detector.py  pullback_detector.py  signal_builder.py  zone_detector.py
